# gym-app

./: CMakeLists.txt  cliente.c  cliente.h  clientes.csv  controle_presenca.c  controle_presenca.h  escrita_dados.c  escrita_dados.h  frequencias.csv  leitura_dados.c  leitura_dados.h  main.c  menu_principal.c  menu_principal.h  presenca.c  presenca.h  relatorios.c  relatorios.h
